# distributed_suffix_sorting_evaluation

./: README.md
B_DC_3_7_13/: CMakeLists.txt
B_DC_3_7_13/src/: CMakeLists.txt  dc.cpp
B_DC_3_7_13/tools/: concatenate  concatenate.cpp  out.txt  verify  verify.cpp
dPD/: CMakeLists.txt
dPD/benchmark/: CMakeLists.txt  dsaca.cpp
dPD/dsss/: CMakeLists.txt
dPD/dsss/atomic_sorting/: sample_sort.hpp  sorting_wrapper.hpp
dPD/dsss/mpi/: check_sort.hpp  sort.hpp  type_mapper.hpp
dPD/dsss/suffix_sorting/: data_structs.hpp  prefix_doubling.hpp  sa_check.hpp
dPD/dsss/util/: memory.hpp
libsais/: CMakeLists.txt
libsais/executables/: run_libsais.c
lightweight_dcx/: CMakeLists.txt
lightweight_dcx/src/: CMakeLists.txt  options.hpp  sa_check.hpp  test.hpp
lightweight_dcx/src/executables/: cli.cpp  main.cpp
lightweight_dcx/src/mpi/: CMakeLists.txt  alltoall.hpp  big_type.hpp  distribute.hpp  io.hpp  p2p.hpp  reduce.hpp  shift.hpp  stats.hpp  zip.hpp
lightweight_dcx/src/pdcx/: CMakeLists.txt  chunking.hpp  compute_ranks.hpp  config.hpp  difference_cover.hpp  merge_samples.hpp  packing.hpp  pdc3.hpp  pdcx.hpp  redistribute.hpp  sample_string.hpp  sequential_sa.hpp  space_efficient_sort.hpp  statistics.hpp
lightweight_dcx/src/sorters/: CMakeLists.txt  prefix_doubling.hpp  sample_sort.hpp  sample_sort_common.hpp  sample_sort_config.hpp  sample_sort_strings.hpp  seq_string_sorter_wrapper.hpp  sorting_wrapper.hpp
lightweight_dcx/src/strings/: CMakeLists.txt  bingmann-lcp_losertree.hpp  char_container.hpp  lcp_type.hpp  merging.hpp  multikey_quicksort.hpp  radix_sort.hpp  string_ptr.hpp  string_set.hpp
lightweight_dcx/src/util/: CMakeLists.txt  binary_search.hpp  division.hpp  macros.hpp  memory.hpp  memory_monitor.hpp  printing.hpp  random.hpp  string_util.hpp  uint_types.hpp
psac/: CMakeLists.txt  pbs_run.sh
psac/include/: alltoall.hpp  big_type.hpp  bucketing.hpp  check_suffix_array.hpp  config.hpp  distribute.hpp  idxsort.hpp  kmer.hpp  lcp.hpp  macros.hpp  memory.hpp  par_rmq.hpp  print.hpp  reduce.hpp  sa_check.hpp  shift.hpp  sorting_wrapper.hpp  stringset.hpp  suffix_array.hpp  suffix_tree.hpp  uint_types.hpp  zip.hpp
psac/src/: CMakeLists.txt  mpi_io.hpp  psac.cpp
